# dizzy-tracker

./: Add_New_Entry.py  app.py  pyproject.toml  requirements.txt
.zed/: debug.json
pages/: Home.py
