[project]
name = "dizzy-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "libsql>=0.1.11",
    "libsql-client>=0.3.1",
    "pandas>=3.0.2",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.57.0",
]
